@@ -2,45 +2,46 @@ package aftermove;
 
 import entities.*;
 import exceptions.*;
-import logic.aftermove.AfterMoveChecker;
+import logic.Controller;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.jupiter.api.Assertions;
 
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.LinkedList;
 import java.util.List;
 
 public class EdgeTerritoryTest {
 
-    public static Game game;
     public static Player player1;
     public static Player player2;
     public static Board myBoard = new Board();
-    public static Board updatedBoard = new Board();
+    public static Board moveBoard = new Board();
 
     @Before
-    public void playGame2() throws UnsupportedPiecesForPlayerException, UsernameTooShortException, InvalidCoordinateException, PositionAlreadyOccupiedException, VictoryException, IllegalMoveException {
+    public void playGame2() throws UnsupportedPiecesForPlayerException, UsernameTooShortException, InvalidCoordinateException {
         player1 = new Player("adfq", Pieces.BLACK);
         player2 = new Player("fwqf", Pieces.WHITE);
-
-        game = new Game(player1, player2);
-        List<String> coordinateBlackList = Arrays.asList("a1", "b1");
-        List<String> coordinateWhiteList = List.of("b0");
-        doMoves(coordinateBlackList, game, player1);
-        doMoves(coordinateWhiteList, game, player2);
-        AfterMoveChecker afterMoveChecker = new AfterMoveChecker(game, player1);
-        updatedBoard = afterMoveChecker.checkAndUpdateBoardAfterMove();
+        List<String> coordinateBlackList = new LinkedList<>(Arrays.asList("a1", "b1"));
+        List<String> coordinateWhiteList = new LinkedList<>(Collections.singleton("b0"));
+        Controller controller = new Controller(moveBoard, new Player[]{player1, player2});
+        doMoves(controller, coordinateBlackList, coordinateWhiteList);
 
         coordinateBlackList = Arrays.asList("a1", "b1", "a0");
+        coordinateWhiteList = List.of("b0");
         setPiecesOnBoard(coordinateWhiteList, Pieces.WHITE);
         setPiecesOnBoard(coordinateBlackList, Pieces.BLACK);
     }
 
-    private void doMoves(List<String> coordinateList, Game game, Player player) throws InvalidCoordinateException, PositionAlreadyOccupiedException, VictoryException, IllegalMoveException {
-        for (String coordinateString: coordinateList) {
-            BoardCoordinate coordinate = new BoardCoordinate(coordinateString);
-            Move move = new Move(player, coordinate);
-            game.move(move);
+    private void doMoves(Controller controller, List<String> coordinateBlackList, List<String> coordinateWhiteList) throws InvalidCoordinateException{
+        while (!coordinateBlackList.isEmpty() || !coordinateWhiteList.isEmpty()){
+            BoardCoordinate blackMove = new BoardCoordinate(coordinateBlackList.remove(0));
+            controller.makeMove(blackMove);
+            if(!coordinateWhiteList.isEmpty()){
+                BoardCoordinate whiteMove = new BoardCoordinate(coordinateWhiteList.remove(0));
+                controller.makeMove(whiteMove);
+            }
         }
     }
 
@@ -52,6 +53,6 @@ public class EdgeTerritoryTest {
 
     @Test
     public void testBoardAfterMove() {
-        Assertions.assertEquals(myBoard, updatedBoard);
+        Assertions.assertEquals(myBoard, moveBoard);
     }
 }
